<resources>
    <string name="app_name">Калькулятор Корана</string>
    <string name="main_title">Калькулятор Корана</string>
    <string name="main_description">Необходимое кол-во страниц для чтения в молитве</string>
    <string name="page_input_hint">Количество страниц</string>
    <string name="prayer_input_hint">Количество молитв в день</string>
    <string name="day_input_hint">Количество дней</string>
    <string name="button_text">Вычислить</string>
</resources>